--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL = "mongodb+srv://loganjones:odNZ1toosdml2PLt@cluster0.1xkc8px.mongodb.net/?retryWrites=true&w=majority"
 PORT = 3001
+JWT_SECRET = "superhardstringtoguess"
